[package]
name = "sulfa"
version = "0.1.1"
authors = ["henrylee2cn <henrylee2cn@gmail.com>"]
edition = "2018"
description = "basic algorithm library implemented by rust"
license = "MIT"
readme = "README.md"
repository = "https://github.com/henrylee2cn/sulfa"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
